@@ -23,9 +23,7 @@ import org.apache.hadoop.yarn.proto.YarnServiceProtos.SchedulerResourceTypes;
 import org.apache.hadoop.yarn.server.resourcemanager.scheduler.capacity.CapacityScheduler;
 import org.apache.hadoop.yarn.server.resourcemanager.scheduler.capacity.CapacitySchedulerConfiguration;
 import org.apache.hadoop.yarn.server.resourcemanager.scheduler.fair.FairScheduler;
-import org.apache.hadoop.yarn.util.resource.DefaultResourceCalculator;
 import org.apache.hadoop.yarn.util.resource.DominantResourceCalculator;
-import org.junit.Assert;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
@@ -42,15 +40,19 @@ import org.apache.hadoop.yarn.server.resourcemanager.rmapp.RMApp;
 import org.apache.hadoop.yarn.server.resourcemanager.rmapp.attempt.*;
 import org.apache.hadoop.yarn.server.resourcemanager.scheduler.ResourceScheduler;
 import org.apache.hadoop.yarn.server.resourcemanager.scheduler.fifo.FifoScheduler;
-
 import org.apache.hadoop.yarn.server.utils.BuilderUtils;
+
 import org.junit.BeforeClass;
 import org.junit.Test;
+import org.junit.Assert;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.EnumSet;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 import static java.lang.Thread.sleep;
-import static org.mockito.Matchers.any;
 
 public class TestApplicationMasterService {
   private static final Log LOG = LogFactory.getLog(TestFifoScheduler.class);
@@ -240,25 +242,23 @@ public class TestApplicationMasterService {
       FinishApplicationMasterRequest req =
           FinishApplicationMasterRequest.newInstance(
               FinalApplicationStatus.FAILED, "", "");
-      Throwable cause = null;
       try {
         am1.unregisterAppAttempt(req, false);
+        Assert.fail("ApplicationMasterNotRegisteredException should be thrown");
+      } catch (ApplicationMasterNotRegisteredException e) {
+        Assert.assertNotNull(e);
+        Assert.assertNotNull(e.getMessage());
+        Assert.assertTrue(e.getMessage().contains(
+            "Application Master is trying to unregister before registering for:"
+        ));
       } catch (Exception e) {
-        cause = e.getCause();
+        Assert.fail("ApplicationMasterNotRegisteredException should be thrown");
       }
-      Assert.assertNotNull(cause);
-      Assert
-          .assertTrue(cause instanceof ApplicationMasterNotRegisteredException);
-      Assert.assertNotNull(cause.getMessage());
-      Assert
-          .assertTrue(cause
-              .getMessage()
-              .contains(
-                  "Application Master is trying to unregister before registering for:"));
 
       am1.registerAppAttempt();
 
       am1.unregisterAppAttempt(req, false);
+      am1.waitForState(RMAppAttemptState.FINISHING);
     } finally {
       if (rm != null) {
         rm.stop();
